@@ -10,7 +10,11 @@ Future planned changes:
 Current version changes:
 0x0C:
   - codebase rearanged, better comments/headers
-  - better rat animation handling
+  - progress on Dirty Rat game
+    - better rat animation handling
+    - colors
+    - collecting floppies
+    - function for drawing walls from stack data
   - bootloader: switching between floppy A: and B:
   - lot of bugfixes
   - more colors
